<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_header"
            android:textIsSelectable="false"/>

        <TextView
            android:id="@+id/paypal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="10dp"
            android:text="@string/donate_paypal_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false"/>

        <TextView
            android:id="@+id/paypal_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paypal_title"
            android:text="@string/donate_paypal_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textIsSelectable="false"/>

        <Button
            android:id="@+id/paypal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/paypal_description"
            android:text="@string/donate_paypal_button"/>

        <RelativeLayout
            android:id="@+id/in_app_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paypal_button"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/in_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_in_app_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false"/>

            <TextView
                android:id="@+id/in_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/in_app_title"
                android:text="@string/donate_in_app_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/in_app_description"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/donate_in_app_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/donate_in_app_spinner_text"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

                <Button
                    android:id="@+id/donate__in_app_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/donate_in_app_button"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>